
Revision 0.2.1, released XX-05-2017
-----------------------------------

- Built-in logging at different verbosity levels implemented
  (via new --log-level option)
- Log SNMP authentication failures
- Added timestamping to file log
- The plugin-options setting fixed to support a list of options,
  as its name suggests
- Fixed malformed timestamp logging at the logger plugin

Revision 0.2.0, released 16-05-2017
-----------------------------------

- Server message classifiers made available at the client side
  for message routing purposes
- Trunk keep-alive service implemented
- Client-side plugins support implemented
- Examples and docs on transparent proxy mode and running at
  secondary interfaces added
- Performance of the "oidfilter" plugin improved on large
  access lists by introducing dichotomy search and operating
  on built-in "tuple" type
- Enforced "oidfilter" configuration consistency by adding
  a bunch of load-time checks

Revision 0.1.0, released 07-05-2017
-----------------------------------

- SNMP TRAP PDU forwarding implemented
- SNMP PDU OIDs filtering plugin implemented
- The "rewrite" plugin reworked to match OIDs and regexp values
- The "logger" plugin refactored to understand more macros; macro names used
  for logging and system configuration options unified
- Single SNMP request scope context is now served to the plugins (plugin
  API version bumped)
- The ${config-dir} macro support added to some configuration options
- Sphinx documentation added

Revision 0.0.3, released 23-04-2017
-----------------------------------

- Sphinx docs added
- PEP8, code style and hardening
- Unspecified trunk-crypto-key now indicates disabled trunk encryption.
- Fix to error-indication usage to comply with newer pysnmp
- Fix to __doc__ use in setup.py to make -O0 installation mode working.
- Fix to PID file creation when running Python 3.
- Copyright notes added to source files
- Author's e-mail changed, copyright extended to year 2017
