@@ -45,7 +45,7 @@ plugin-modules-path-list: ./plugins ${plugin-dir}
 
 plugin-group {
   plugin-module: oidfilter
-  plugin-options: config=${config-dir}/plugins/oidfilter.conf
+  plugin-options: config=${config-dir}/plugins/oidfilter.conf log-denials=true
 
   plugin-id: permit-system-branch
 }
